--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "devDependencies": {
     "2015": "^0.0.1",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es": "^1.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
